// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`downloadFromUrl Downloads from url 1`] = `
{
  "click": [MockFunction] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "href": "https://www.example.com/download",
  "style": {
    "display": "none",
  },
}
`;

exports[`downloadFromUrl Uses filename if provided 1`] = `
{
  "click": [MockFunction] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "download": "mockFileName",
  "href": "https://www.example.com/download",
  "style": {
    "display": "none",
  },
}
`;
